--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typeface-advent-pro": "0.0.69",
+    "typeface-fredoka-one": "0.0.72",
+    "typeface-great-vibes": "0.0.72"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.2.0",
