--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "styled-components": "^5.1.1",
     "typeface-advent-pro": "0.0.69",
     "typeface-fredoka-one": "0.0.72",
-    "typeface-great-vibes": "0.0.72"
+    "typeface-great-vibes": "0.0.72",
+    "typeface-lato": "0.0.75"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.2.0",
