--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -6,7 +6,7 @@
     },
     "cloudboost": {
       "title": "CloudBoost",
-      "data": "Created authentication process on react, updated customers dashboard and worked on stripe intergration with expressjs"
+      "description": "Created authentication process on react, updated customers dashboard and worked on stripe intergration with expressjs"
     }
   }
 }
