--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "typeface-lato": "0.0.75"
   },
   "devDependencies": {
+    "@size-limit/preset-big-lib": "^4.5.6",
     "cz-conventional-changelog": "^3.2.0",
     "env-cmd": "^10.1.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "size-limit": "^4.5.6"
   },
   "keywords": [
     "gatsby"
@@ -47,8 +49,10 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "commit": "git cz",
+    "size": "size-limit",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
+  "size-limit": [{ "path": ""}],
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
