--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
     "babel-plugin-styled-components": "^1.11.1",
+    "core-js": "^3.6.5",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-manifest": "^2.4.5",
@@ -31,10 +32,17 @@
     "typeface-lato": "0.0.75"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
     "@size-limit/preset-big-lib": "^4.5.6",
+    "@storybook/addon-actions": "^6.0.10",
+    "@storybook/addon-essentials": "^6.0.10",
+    "@storybook/addon-links": "^6.0.10",
+    "@storybook/react": "^6.0.10",
+    "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.2.0",
     "env-cmd": "^10.1.0",
     "prettier": "2.0.5",
+    "react-is": "^16.13.1",
     "size-limit": "^4.5.6"
   },
   "keywords": [
@@ -50,9 +58,15 @@
     "clean": "gatsby clean",
     "commit": "git cz",
     "size": "size-limit",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-  "size-limit": [{ "path": ""}],
+  "size-limit": [
+    {
+      "path": ""
+    }
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-default"
