chore: adding storybook addons

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
+    "@storybook/addon-a11y": "^6.0.10",
     "babel-plugin-styled-components": "^1.11.1",
     "core-js": "^3.6.5",
     "gatsby": "^2.21.37",
@@ -37,6 +38,7 @@
     "@storybook/addon-actions": "^6.0.10",
     "@storybook/addon-essentials": "^6.0.10",
     "@storybook/addon-links": "^6.0.10",
+    "@storybook/addon-storysource": "^6.0.10",
     "@storybook/react": "^6.0.10",
     "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.2.0",
