chore: upgrading storybook

--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@size-limit/preset-big-lib": "^4.5.6",
-    "@storybook/addon-a11y": "^6.0.10",
-    "@storybook/addon-actions": "^6.0.10",
-    "@storybook/addon-essentials": "^6.0.10",
-    "@storybook/addon-links": "^6.0.10",
-    "@storybook/addon-storysource": "^6.0.10",
-    "@storybook/react": "^6.0.10",
+    "@storybook/addon-a11y": "^6.0.12",
+    "@storybook/addon-actions": "^6.0.12",
+    "@storybook/addon-essentials": "^6.0.12",
+    "@storybook/addon-links": "^6.0.12",
+    "@storybook/addon-storysource": "^6.0.12",
+    "@storybook/react": "^6.0.12",
+    "@storybook/theming": "^6.0.12",
     "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.2.0",
     "env-cmd": "^10.1.0",
