--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.14",
+    "gatsby-plugin-flow": "^1.3.11",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-mdx": "^1.2.34",
     "gatsby-plugin-module-resolver": "^1.0.3",
@@ -44,6 +45,7 @@
     "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.2.0",
     "env-cmd": "^10.1.0",
+    "flow-bin": "^0.131.0",
     "prettier": "2.0.5",
     "react-is": "^16.13.1",
     "size-limit": "^4.5.6"
@@ -63,7 +65,8 @@
     "size": "size-limit",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "flow": "flow ./src/"
   },
   "size-limit": [
     {
