fix: fixing graphql failing in rendering on storybook

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "commit": "git cz",
     "size": "size-limit",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "NODE_ENV=production start-storybook -p 6006 -s static",
     "build-storybook": "build-storybook",
     "flow": "flow ./src/"
   },
