--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.6.16",
     "babel-plugin-styled-components": "^1.11.1",
     "core-js": "^3.6.5",
+    "framer-motion": "^2.4.3-beta.2",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-flow": "^1.3.11",
@@ -37,13 +38,13 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@size-limit/preset-big-lib": "^4.5.6",
-    "@storybook/addon-a11y": "^6.0.12",
-    "@storybook/addon-actions": "^6.0.12",
-    "@storybook/addon-essentials": "^6.0.12",
-    "@storybook/addon-links": "^6.0.12",
-    "@storybook/addon-storysource": "^6.0.12",
-    "@storybook/react": "^6.0.12",
-    "@storybook/theming": "^6.0.12",
+    "@storybook/addon-a11y": "^6.0.16",
+    "@storybook/addon-actions": "^6.0.16",
+    "@storybook/addon-essentials": "^6.0.16",
+    "@storybook/addon-links": "^6.0.16",
+    "@storybook/addon-storysource": "^6.0.16",
+    "@storybook/react": "^6.0.16",
+    "@storybook/theming": "^6.0.16",
     "babel-loader": "^8.1.0",
     "cz-conventional-changelog": "^3.2.0",
     "env-cmd": "^10.1.0",
