--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^3.10.0",
     "react-svg": "^11.0.36",
     "styled-components": "^5.1.1",
+    "styled-normalize": "^8.0.7",
     "typeface-advent-pro": "0.0.69",
     "typeface-fredoka-one": "0.0.72",
     "typeface-great-vibes": "0.0.72",
