--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -9,7 +9,7 @@
     },
     "portfolio": {
       "title": "Portfolio",
-      "description": "It was a great learning experience while I was building my own portifolio. I was trying to properly documenting UI components with storybook, creating reusable components and taking advantage of css-in-js approach with styled-components library.",
+      "description": "It's been a great learning experience while building my portifolio. Though most of the tools were used and concepts I was applying were little bit new to me, but I managed to achieve core important things. <ul><li>Documenting UI components with storybook.</li> <li>Creating reusable components with atomic design approach.</li> <li>Using stitic site generator for SEO optimization.</li></ul>",
       "url": "/",
       "repo": "https://github.com/rbluena/rbluena",
       "tools": [
