--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -12,12 +12,16 @@
       "description": "It's been a great learning experience while building my portifolio. Though most of the tools were used and concepts I was applying were little bit new to me, but I managed to achieve core important things. <ul><li>Documenting UI components with storybook.</li> <li>Creating reusable components with atomic design approach.</li> <li>Using stitic site generator for SEO optimization.</li></ul>",
       "url": "/",
       "repo": "https://github.com/rbluena/rbluena",
+      "styleguide": "https://styleguide.rabiiluena.com",
+      "designs": "https://figma.com/portflio",
+      "workflow": "https://notion.com",
       "tools": [
         "Gatsby",
         "Styled Component",
         "Storybook",
         "Figma",
-        "Google Analytics"
+        "Google Analytics",
+        "Notion"
       ]
     },
     "greenrush": {
