--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cz-conventional-changelog": "^3.2.0",
     "env-cmd": "^10.1.0",
     "flow-bin": "^0.131.0",
+    "gh-pages": "^3.1.0",
     "prettier": "2.0.5",
     "react-is": "^16.13.1",
     "size-limit": "^4.5.6"
@@ -71,6 +72,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "storybook": "NODE_ENV=production start-storybook -p 6006 -s static",
     "build-storybook": "build-storybook",
+    "deploy": "gatsby build && gh-pages -d public -b master",
     "flow": "flow ./src/"
   },
   "size-limit": [
