--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^2.4.3-beta.2",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.14",
+    "gatsby-plugin-canonical-urls": "^2.3.10",
     "gatsby-plugin-flow": "^1.3.11",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-mdx": "^1.2.34",
@@ -73,7 +74,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "storybook": "NODE_ENV=production start-storybook -p 6006 -s static",
     "build-storybook": "build-storybook",
-    "predeploy":"gatsby clean && gatsby build --prefix-paths && cp CNAME ./public",
+    "predeploy": "gatsby clean && gatsby build --prefix-paths && cp CNAME ./public",
     "deploy": "gh-pages -d public -b master",
     "flow": "flow ./src/"
   },
