--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-flow": "^1.3.11",
+    "gatsby-plugin-google-analytics": "^2.3.14",
     "gatsby-plugin-google-tagmanager": "^2.3.12",
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-mdx": "^1.2.34",
