fix: addressing typos mistakes

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
       "title": "Asteyo - Task Management and Scheduler",
       "description": "It was part of applications lead to founding of Asteyo Inc. Scheduler and task management software running on the web.",
       "achievements": [
-        "Build front-end with NextJS, TailwindCSS and Ant Design.",
+        "Built front-end with NextJS, TailwindCSS and Ant Design.",
         "Built the backend with ExpressJS and MongoDB."
       ],
       "url": "https://youtu.be/a6xQikKh2Tc",
